--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-<app-toolbar></app-toolbar>
-<app-navbar [items]='companies'></app-navbar>
+<app-toolbar [items]='companies'></app-toolbar>
 <router-outlet></router-outlet>
 
 
