changes in design and navbar component is added

--- a/src/app/core/components/toolbar/toolbar.component.html
+++ b/src/app/core/components/toolbar/toolbar.component.html
@@ -1,2 +1,4 @@
-<h1>TuCita Virtual</h1>
-<div class="more"></div>
+<mat-toolbar color="primary" class="container">
+  <span><a routerLink="/home">TuCita Virtual</a></span>
+  <app-navbar [items]="items"></app-navbar>
+</mat-toolbar>
