--- a/src/app/feature/producto/components/agendar-cita/agendar-cita.component.scss
+++ b/src/app/feature/producto/components/agendar-cita/agendar-cita.component.scss
@@ -1,35 +1,35 @@
 .container{
   display: grid;
   position: absolute;
-  top: 40%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
 }
 
 .container h1{
-  margin-bottom: 28px;
   font-size: 25px;
   font-weight: 500;
   text-align: center;
   text-transform: uppercase;
 }
 
+.container span{
+  margin-bottom: 28px;
+  font-size: 13px;
+  text-align: center;
+}
+
 .row{
   display: grid;
-  grid-template-columns: repeat(2,1fr);
-  grid-gap: 30px;
-  width: 400px;
-  margin-bottom: 5px;
+  grid-template-rows: auto;
+  grid-gap: 10px;
+  width: auto;
 }
 
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
-}
-
-.date{
-  width: 202px !important;
 }
 
 .btn-cita{
