--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<app-toolbar [items]='companies'></app-toolbar>
+<!-- <app-toolbar [items]='companies'></app-toolbar> -->
+<app-navbar [items]='companies'></app-navbar>
 <router-outlet></router-outlet>
 
 
