--- a/src/app/feature/home/home.component.scss
+++ b/src/app/feature/home/home.component.scss
@@ -46,3 +46,42 @@
   font-size: 18px;
   font-weight: 500;
 }
+
+@media only screen and (max-width: 800px) {
+  #container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
+    align-items: center;
+    padding: 0 12px 0 52px;
+  }
+  #card-1,
+  #card-2{
+    width: 100%;
+  }
+  #card-1 p{
+    width: 70%;
+  }
+}
+
+@media only screen and (max-width: 420px) {
+  #container{
+    display: grid;
+    grid-template-columns: auto;
+    grid-gap: 80px;
+    justify-items: center;
+    padding: 0;
+    text-align: -webkit-center;
+  }
+  #card-1,
+  #card-2{
+    width: 100%;
+  }
+  #card-1 p{
+    width: 80%;
+  }
+  #card-main p{
+    font-size: 16px;
+  }
+}
+
