add header component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-<!-- <app-toolbar [items]='companies'></app-toolbar> -->
-<app-navbar [items]='companies'></app-navbar>
+<app-header [items]='companies'></app-header>
 <router-outlet></router-outlet>
 
 
