change route in button

--- a/src/app/feature/home/home.component.html
+++ b/src/app/feature/home/home.component.html
@@ -2,7 +2,7 @@
   <div id="card-1">
     <h2>¿Qué Hacemos?</h2>
     <p>Atendemos todo lo relacionado con salud mental y conflictos familiares y/o relacionales como disfunción familiar y de pareja. Atención especial a trastornos alimenticios.</p>
-    <button mat-raised-button color="primary" (click)="redirectToCitas()">Agendar cita</button>
+    <button id="button_agendar" mat-raised-button color="primary" (click)="redirectToCitas()">Agendar cita</button>
   </div>
   <div id="card-2">
     <section id="container-card">
