--- a/src/app/core/components/footer/footer.component.scss
+++ b/src/app/core/components/footer/footer.component.scss
@@ -8,3 +8,9 @@
   text-align: center;
   position: fixed;
 }
+
+@media only screen and (max-width: 1300px) {
+  .footer{
+    display: none;
+  }
+}
