--- a/src/app/feature/home/home.component.scss
+++ b/src/app/feature/home/home.component.scss
@@ -47,6 +47,13 @@
   font-weight: 500;
 }
 
+@media only screen and (max-width: 1300px) {
+  #card-1,
+  #card-2{
+    width: 40%;
+  }
+}
+
 @media only screen and (max-width: 1100px) {
   #container{
     display: grid;
