--- a/src/app/feature/producto/components/agendar-cita/agendar-cita.component.scss
+++ b/src/app/feature/producto/components/agendar-cita/agendar-cita.component.scss
@@ -42,3 +42,10 @@ input[type=number]::-webkit-outer-spin-button {
     margin-top: 12px;
     text-transform: uppercase;
 }
+
+@media only screen and (max-width: 1300px) {
+  .container{
+    display: grid;
+    top: 50%;
+  }
+}
