Se elimino homecomponent y se desplazo toda la info a citaComponent

--- a/src/app/feature/producto/components/cita/cita.component.html
+++ b/src/app/feature/producto/components/cita/cita.component.html
@@ -1,1 +1,27 @@
-<app-agendar-cita></app-agendar-cita>
+<section id="container">
+  <div id="card-1">
+    <h2>¿Qué Hacemos?</h2>
+    <p>Atendemos todo lo relacionado con salud mental y conflictos familiares y/o relacionales como disfunción familiar y de pareja. Atención especial a trastornos alimenticios.</p>
+    <button id="button_agendar" mat-raised-button color="primary" (click)="redirectToCitas()">Agendar cita</button>
+  </div>
+  <div id="card-2">
+    <section id="container-card">
+      <div id="card-main">
+        <mat-icon aria-hidden="false">favorite</mat-icon>
+        <p>Mejora en la calidad de vida</p>
+      </div>
+      <div id="card-main">
+        <mat-icon aria-hidden="false">how_to_reg</mat-icon>
+        <p>Mejora en la atención, concentración y memoria</p>
+      </div>
+      <div id="card-main">
+        <mat-icon aria-hidden="false">sentiment_satisfied</mat-icon>
+        <p>Mejora en niveles emocionales</p>
+      </div>
+      <div id="card-main">
+        <mat-icon aria-hidden="false">people</mat-icon>
+        <p>Mejora en la interacción social y familiar</p>
+      </div>
+    </section>
+  </div>
+</section>
