--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -4,7 +4,7 @@
       <button mat-icon-button (click)="sidenav.toggle()" fxShow="true" fxHide.gt-sm>
         <mat-icon>menu</mat-icon>
       </button>
-      <span><a routerLink="/home">TuCita Virtual<mat-icon>spa</mat-icon></a></span>
+      <span><a routerLink="/cita">TuCita Virtual<mat-icon>spa</mat-icon></a></span>
       <span class="menu-spacer"></span>
       <div fxShow="true" fxHide.lt-md>
         <a *ngFor="let item of items" [routerLink]="item.url" routerLinkActive="active" class="nav-caption">{{item.nombre}}</a>
