--- a/src/app/feature/producto/components/lista-cita/lista-cita.component.scss
+++ b/src/app/feature/producto/components/lista-cita/lista-cita.component.scss
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   margin-top: 115px;
+  margin-bottom: 10px;
 }
 
 #btn_agendar{
@@ -17,12 +18,36 @@
   background-position: right center;
 }
 
+.c-search {
+  display: flex;
+  justify-content: center;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  margin: 0 auto 30px;
+}
+
+#filtro-usuario{
+  border-radius: 10px 0px 10px 0;
+  font-size: 16px;
+  border: 1px solid rgb(22, 21, 21);
+  padding: 4px 16px;
+}
+
+#filtro-usuario:focus{
+  outline: none;
+}
+
 .lista-cita__table {
-  position: absolute;
-  top: 26%;
+  position: fixed;
+  top: 45%;
   left: 50%;
   transform: translate(-50%,-50%);
   min-width: 1200px;
+  margin-top: 50px;
+}
+
+caption{
+  display: none;
 }
 
 table {
@@ -60,4 +85,35 @@ th{
 
 #btn-eliminar{
   border-radius: 12px;
+}
+
+@media only screen and (max-width: 1300px) {
+  .btn-container{
+    margin-top: 55px;
+  }
+  .lista-cita__table{
+    top: 33%;
+  }
+}
+
+@media only screen and (max-width: 580px) {
+  .lista-cita__table{
+    top: 32%;
+    min-width: 200px;
+  }
+  .mat-column-email {
+    max-width: 24px;
+  }
+  table{
+    width: 20%;
+  }
+  th, td, #btn-eliminar{
+    font-size: 7px;
+  }
+  #btn-eliminar{
+    width: 50px;
+    height: 25px;
+    padding: 0px;
+    text-align: center;
+  }
 }
