--- a/src/app/feature/producto/components/lista-cita/lista-cita.component.html
+++ b/src/app/feature/producto/components/lista-cita/lista-cita.component.html
@@ -1,44 +1,15 @@
 <section class="btn-container">
-  <button id="btn_agendar" routerLink="/cita/crear" mat-raised-button color="primary">
+  <button id="btn_agendar" [routerLink]="['../crear']" mat-raised-button color="primary">
     Agendar nueva cita
   </button>
 </section>
 
-<div class="row">
-  <div class="col">
-    <div class="c-search">
-      <input type="text" class="form-control" name="filtroUsuario" placeholder="Buscar Usuario..." [(ngModel)]="filtroUsuario" id="filtro-usuario">
-    </div>
-  </div>
-</div>
-
-<section class="lista-cita__table">
-  <section class="table-container">
-    <table class="table" id="cita-list__table">
-      <caption>Tabla Citas</caption>
-      <thead>
-        <th scope="col">Fecha de la Cita</th>
-        <th scope="col">Nombre Completo</th>
-        <th scope="col">Email</th>
-        <th scope="col">Teléfono/Celular</th>
-        <th scope="col">Valor Cita</th>
-        <th scope="col"></th>
-      </thead>
-      <tbody>
-        <tr *ngFor="let cita of citas | async | filterUser:filtroUsuario">
-          <td>{{ cita.date | date }}</td>
-          <td>{{ cita.name }}</td>
-          <td>{{ cita.email }}</td>
-          <td>{{ cita.tel }}</td>
-          <td>{{ cita.tarifa | currency:'USD':'symbol':'3.0' }}</td>
-          <td id="row-btn">
-            <button id="btn-eliminar" mat-raised-button color="warn" focusable="false" (click)="eliminarCita(cita)">
-              Eliminar cita
-            </button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </section>
-</section>
+<app-generic-table
+    [data]="citas"
+    [labels]="labels"
+    [fields]="fields"
+    [caption]="caption"
+    [action]="action"
+    (selectedItem)="eliminarCita($event)"
+></app-generic-table>
 
